--- a/angular.json
+++ b/angular.json
@@ -63,7 +63,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "learn-dhis:build"
+            "browserTarget": "learn-dhis:build",
+            "proxyConfig": "proxy-config.json"
           },
           "configurations": {
             "production": {
