--- a/proxy-config.json
+++ b/proxy-config.json
@@ -1,12 +1,12 @@
 {
   "/api": {
-      "target": "https://play.dhis2.org",
+      "target": "https://play.dhis2.org/2.31.5",
       "secure": "false",
       "auth": "admin:district",
       "changeOrigin": "true"
   },
   "/": {
-      "target": "https://play.dhis2.org",
+      "target": "https://play.dhis2.org/2.31.5",
       "secure": "false",
       "auth": "admin:district",
       "changeOrigin": "true"
