editor for value json objects

--- a/package.json
+++ b/package.json
@@ -22,11 +22,16 @@
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@hisptz/ngx-dhis2-http-client": "^2.0.2",
     "@iapps/ngx-dhis2-http-client": "^2.0.8-beta.3",
+    "@ng-vcl/json-editor": "^0.4.0-12",
     "@ngrx/store": "^8.3.0",
+    "ang-jsoneditor": "^1.8.3",
     "jsoneditor": "^7.0.4",
     "ng-jsoneditor": "^1.0.0",
+    "ng2-ace-editor": "^0.3.9",
     "ng2-json-editor": "^0.25.12",
+    "ng2-jsoneditor": "^0.1.1",
     "ngx-json-viewer": "^2.4.0",
+    "ngx-pagination": "^4.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
