--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ng2-ace-editor": "^0.3.9",
     "ng2-json-editor": "^0.25.12",
     "ng2-jsoneditor": "^0.1.1",
+    "ngx-filter-pipe": "^2.1.2",
     "ngx-json-viewer": "^2.4.0",
     "ngx-pagination": "^4.1.0",
     "rxjs": "~6.4.0",
