--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ng-vcl/json-editor": "^0.4.0-12",
     "@ngrx/store": "^8.3.0",
     "ang-jsoneditor": "^1.8.3",
+    "guid-typescript": "^1.0.9",
     "jsoneditor": "^7.0.4",
     "ng-jsoneditor": "^1.0.0",
     "ng2-ace-editor": "^0.3.9",
@@ -35,6 +36,7 @@
     "ngx-pagination": "^4.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "uniqid": "^5.0.3",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
