--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy-config.json",
-    "build": "ng build",
+    "build": "ng build --prod --aot && cd dist/datastore-import-export && zip -r -D datastore-import-export.zip .",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
