--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy-config.json",
+    "start": "ng serve --aot --prod --proxy-config proxy-config.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -32,6 +32,7 @@
     "ng2-ace-editor": "^0.3.9",
     "ng2-json-editor": "^0.25.12",
     "ng2-jsoneditor": "^0.1.1",
+    "ng2-tooltip-directive": "^2.8.17",
     "ngx-filter-pipe": "^2.1.2",
     "ngx-json-viewer": "^2.4.0",
     "ngx-pagination": "^4.1.0",
