feat: add ngx-dhis2-menu

--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-
     "start": "ng serve --proxy-config proxy-config.json",
     "build": "ng build --prod --aot && cd dist/datastore-import-export && zip -r -D datastore-import-export.zip .",
-
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -24,6 +22,7 @@
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@hisptz/ngx-dhis2-http-client": "^2.0.2",
     "@iapps/ngx-dhis2-http-client": "^2.0.8-beta.3",
+    "@iapps/ngx-dhis2-menu": "^1.0.11-beta.4",
     "@ng-vcl/json-editor": "^0.4.0-12",
     "@ngrx/store": "^8.4.0",
     "ang-jsoneditor": "^1.8.4",
