fix: resloved '//' issue on defaultAction by updating menu module to version 1.0.11-beta.6

--- a/proxy-config.json
+++ b/proxy-config.json
@@ -1,14 +1,14 @@
 {
   "/api": {
-      "target": "https://play.dhis2.org/2.30",
-      "secure": "false",
-      "auth": "admin:district",
-      "changeOrigin": "true"
+    "target": "https://hmisportal.moh.go.tz/dhis",
+    "secure": "false",
+    "auth": "josephatjulius:Jovan2013",
+    "changeOrigin": "true"
   },
   "/": {
-      "target": "https://play.dhis2.org/2.30",
-      "secure": "false",
-      "auth": "admin:district",
-      "changeOrigin": "true"
+    "target": "https://hmisportal.moh.go.tz/dhis",
+    "secure": "false",
+    "auth": "josephatjulius:Jovan2013",
+    "changeOrigin": "true"
   }
 }
