--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy-config.json",
-    "build": "ng build --prod --aot && cd dist/datastore-import-export && zip -r -D datastore-import-export.zip .",
+    "build": "ng build --configuration production --aot && cd dist/datastore-import-export && zip -r -D datastore-import-export.zip .",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.14",
-    "@angular/common": "~11.2.14",
-    "@angular/compiler": "~11.2.14",
-    "@angular/core": "~11.2.14",
-    "@angular/forms": "~11.2.14",
-    "@angular/platform-browser": "~11.2.14",
-    "@angular/platform-browser-dynamic": "~11.2.14",
-    "@angular/router": "~11.2.14",
+    "@angular/animations": "~12.2.17",
+    "@angular/common": "~12.2.17",
+    "@angular/compiler": "~12.2.17",
+    "@angular/core": "~12.2.17",
+    "@angular/forms": "~12.2.17",
+    "@angular/platform-browser": "~12.2.17",
+    "@angular/platform-browser-dynamic": "~12.2.17",
+    "@angular/router": "~12.2.17",
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@iapps/ngx-dhis2-http-client": "^2.0.8-beta.3",
     "@iapps/ngx-dhis2-menu": "^1.0.11-beta.6",
@@ -39,12 +39,12 @@
     "rxjs": "~6.5.3",
     "tslib": "^2.0.0",
     "uniqid": "^5.0.3",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "~11.2.19",
-    "@angular/compiler-cli": "~11.2.14",
-    "@angular/language-service": "~11.2.14",
+    "@angular/cli": "~12.2.18",
+    "@angular/compiler-cli": "~12.2.17",
+    "@angular/language-service": "~12.2.17",
     "@editorjs/editorjs": "^2.15.1",
     "@types/jasmine": "~3.4.4",
     "@types/jasminewd2": "~2.0.8",
@@ -63,7 +63,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.4.1",
     "tslint": "~6.1.0",
-    "typescript": "^4.0.8"
+    "typescript": "^4.3.5"
   },
   "config": {
     "commitizen": {
