--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.2.2",
+    "@angular/cdk": "^17.2.1",
     "@angular/common": "^17.2.2",
     "@angular/compiler": "^17.2.2",
     "@angular/core": "^17.2.2",
@@ -20,12 +21,17 @@
     "@angular/platform-browser-dynamic": "^17.2.2",
     "@angular/router": "^17.2.2",
     "@ckeditor/ckeditor5-angular": "^1.1.0",
-    "@iapps/ngx-dhis2-http-client": "^2.0.8-beta.3",
-    "@iapps/ngx-dhis2-menu": "^1.0.11-beta.6",
+    "@dhis2/app-adapter": "^10.5.0",
+    "@dhis2/app-runtime": "^3.10.2",
+    "@dhis2/d2-i18n": "^1.1.3",
+    "@dhis2/ui": "^8.13.0",
+    "@iapps/ng-dhis2-shell": "^1.0.3",
+    "@iapps/ngx-dhis2-http-client": "^3.0.0-alpha.3",
     "@ng-vcl/json-editor": "^0.4.0-12",
     "@ngrx/store": "^17.1.1",
     "ang-jsoneditor": "^1.8.4",
     "big-json": "^3.0.0",
+    "dexie": "^3.2.5",
     "guid-typescript": "^1.0.9",
     "jsoneditor": "^7.2.1",
     "ng-jsoneditor": "^1.0.0",
@@ -34,9 +40,12 @@
     "ng2-jsoneditor": "^0.1.1",
     "ng2-tooltip-directive": "^2.8.17",
     "ngx-filter-pipe": "^2.1.2",
-    "ngx-json-viewer": "^2.4.0",
-    "ngx-pagination": "^4.1.0",
-    "rxjs": "~6.5.3",
+    "ngx-pagination": "^6.0.3",
+    "ngx-pipes": "^3.2.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rxjs": "^7.8.1",
+    "styled-jsx": "^5.1.2",
     "tslib": "^2.0.0",
     "uniqid": "^5.0.3",
     "zone.js": "~0.14.4"
